done with notebook

--- a/student-old.ipynb
+++ b/student-old.ipynb
@@ -1344,6 +1344,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# first, let's drop two features which seem to have \n",
+    "# exorbitantly high multicollinearity with other features\n",
+    "features.drop()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
